.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:13:58 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:7: warning: unused variable 'counter' [-Wunused-variable]
  103 |   int counter = 0;
      |       ^~~~~~~
arm-none-eabi-gcc -o "BNO055_DRIVER_TEST.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\doruk\source\repos\ProfDorukTan\BNO055\BNO055_DRIVER_TEST\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BNO055_DRIVER_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BNO055_DRIVER_TEST.elf
 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
arm-none-eabi-objdump -h -S BNO055_DRIVER_TEST.elf  > "BNO055_DRIVER_TEST.list"
   text	   data	    bss	    dec	    hex	filename
  44840	    472	   2472	  47784	   baa8	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
Finished building: BNO055_DRIVER_TEST.list
 
01:14:01 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
   text	   data	    bss	    dec	    hex	filename
  44840	    472	   2472	  47784	   baa8	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
01:20:13 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:111:38: error: expected ';' before '}' token
  111 |           NEVSPACE_BNO055_gyro_test()
      |                                      ^
      |                                      ;
......
  115 |   }
      |   ~                                   
../Core/Src/main.c:103:7: warning: unused variable 'counter' [-Wunused-variable]
  103 |   int counter = 0;
      |       ^~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
01:20:19 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:7: warning: unused variable 'counter' [-Wunused-variable]
  103 |   int counter = 0;
      |       ^~~~~~~
arm-none-eabi-gcc -o "BNO055_DRIVER_TEST.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\doruk\source\repos\ProfDorukTan\BNO055\BNO055_DRIVER_TEST\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BNO055_DRIVER_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BNO055_DRIVER_TEST.elf
 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
arm-none-eabi-objdump -h -S BNO055_DRIVER_TEST.elf  > "BNO055_DRIVER_TEST.list"
   text	   data	    bss	    dec	    hex	filename
  31248	    472	   2128	  33848	   8438	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
Finished building: BNO055_DRIVER_TEST.list
 
01:27:12 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:7: warning: unused variable 'counter' [-Wunused-variable]
  103 |   int counter = 0;
      |       ^~~~~~~
arm-none-eabi-gcc -o "BNO055_DRIVER_TEST.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\doruk\source\repos\ProfDorukTan\BNO055\BNO055_DRIVER_TEST\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BNO055_DRIVER_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BNO055_DRIVER_TEST.elf
 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
arm-none-eabi-objdump -h -S BNO055_DRIVER_TEST.elf  > "BNO055_DRIVER_TEST.list"
   text	   data	    bss	    dec	    hex	filename
  31336	    472	   2128	  33936	   8490	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
Finished building: BNO055_DRIVER_TEST.list
 
01:35:55 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:7: warning: unused variable 'counter' [-Wunused-variable]
  103 |   int counter = 0;
      |       ^~~~~~~
arm-none-eabi-gcc -o "BNO055_DRIVER_TEST.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\doruk\source\repos\ProfDorukTan\BNO055\BNO055_DRIVER_TEST\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BNO055_DRIVER_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BNO055_DRIVER_TEST.elf
 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
arm-none-eabi-objdump -h -S BNO055_DRIVER_TEST.elf  > "BNO055_DRIVER_TEST.list"
   text	   data	    bss	    dec	    hex	filename
  30976	    472	   2128	  33576	   8328	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
Finished building: BNO055_DRIVER_TEST.list
 
01:38:08 **** Incremental Build of configuration Debug for project BNO055_DRIVER_TEST ****
make -j16 all 
arm-none-eabi-size  BNO055_DRIVER_TEST.elf 
   text	   data	    bss	    dec	    hex	filename
  30976	    472	   2128	  33576	   8328	BNO055_DRIVER_TEST.elf
Finished building: default.size.stdout
 
